// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cs100-r1.0 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "2c91942a293525e0",
  "chunks": 32,
  "text": "21064a71970bb389",
}
`;

exports[`cs100-r1.0 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "f419fc413b48bbcf",
  "chunks": 228,
  "text": "e52a937d95ca0c7b",
}
`;

exports[`cs100-r1.0 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "0ae26a1c6f391450",
  "chunks": 770,
  "text": "6672255162cfe713",
}
`;

exports[`cs100-r1.0 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "eb543e8c4acf5120",
  "chunks": 784,
  "text": "c787321065f71b01",
}
`;

exports[`cs100-r1.0 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "9cec03c9e5f859db",
  "chunks": 181,
  "text": "180adf0d847b10c8",
}
`;

exports[`cs100-r1.0 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "1ced05e0c74a0e35",
  "chunks": 412,
  "text": "6e1d399c8c7ebffb",
}
`;

exports[`cs100-r1.0 > spec-commonmark 1`] = `
{
  "breadcrumbs": "c98dce2b8f445e7a",
  "chunks": 2267,
  "text": "b5d06e6ffd4846c2",
}
`;

exports[`cs100-r1.0 > spec-gfm 1`] = `
{
  "breadcrumbs": "6ee4876211602190",
  "chunks": 2412,
  "text": "a80748c0381d67a3",
}
`;

exports[`cs100-r1.0 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "d4c65d0241dbff61",
  "chunks": 1388,
  "text": "be2190b195f8bf0a",
}
`;

exports[`cs100-r1.0 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "96395e9d3ab8fb40",
  "chunks": 152,
  "text": "9fdbbb586f686cc9",
}
`;

exports[`cs100-r1.0 > wikipedia-python 1`] = `
{
  "breadcrumbs": "3d9bfbb45ae15874",
  "chunks": 709,
  "text": "e086c4c94ff34be4",
}
`;

exports[`cs100-r1.0 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "bca0d515f9812e15",
  "chunks": 847,
  "text": "7d1861d5eb02330d",
}
`;

exports[`cs100-r1.5 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "6bd11c5480b66ba3",
  "chunks": 22,
  "text": "89253c10ea9fc579",
}
`;

exports[`cs100-r1.5 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "cd40beabb245f089",
  "chunks": 165,
  "text": "c6cf3d601513958e",
}
`;

exports[`cs100-r1.5 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "5c59a6e1abcee084",
  "chunks": 542,
  "text": "c74300f43ef0d5ad",
}
`;

exports[`cs100-r1.5 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "c6d3a10b6133e5ee",
  "chunks": 511,
  "text": "3cb4e36037a49399",
}
`;

exports[`cs100-r1.5 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "8058eea1237b50be",
  "chunks": 124,
  "text": "2c6b82f71335692a",
}
`;

exports[`cs100-r1.5 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "84081a77473b3440",
  "chunks": 278,
  "text": "941924a09d747c49",
}
`;

exports[`cs100-r1.5 > spec-commonmark 1`] = `
{
  "breadcrumbs": "7a4e7ba97f62776d",
  "chunks": 1475,
  "text": "0a314977a57347c9",
}
`;

exports[`cs100-r1.5 > spec-gfm 1`] = `
{
  "breadcrumbs": "5d4a7f382d42f0e6",
  "chunks": 1589,
  "text": "07405da316efb4ef",
}
`;

exports[`cs100-r1.5 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "79135453c3658438",
  "chunks": 1010,
  "text": "47e6c631c37a1120",
}
`;

exports[`cs100-r1.5 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "52a48a9d2098d886",
  "chunks": 109,
  "text": "bb027b8d9e67275b",
}
`;

exports[`cs100-r1.5 > wikipedia-python 1`] = `
{
  "breadcrumbs": "f3cee6035af4fd8b",
  "chunks": 462,
  "text": "9a2d5bb002c81a17",
}
`;

exports[`cs100-r1.5 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "7b518dcddd163848",
  "chunks": 559,
  "text": "e8ed9636462ee58f",
}
`;

exports[`cs250-r1.0 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "6076cc0ec7d78622",
  "chunks": 14,
  "text": "e5046dca9ea027d7",
}
`;

exports[`cs250-r1.0 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "e82e732627168dcd",
  "chunks": 103,
  "text": "885c855a8d6a4463",
}
`;

exports[`cs250-r1.0 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "7a2012d57f56747e",
  "chunks": 328,
  "text": "81a966df870e036a",
}
`;

exports[`cs250-r1.0 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "7207c7c7a77594b3",
  "chunks": 307,
  "text": "0da49628ecc9524a",
}
`;

exports[`cs250-r1.0 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "3fd0510c098d87cb",
  "chunks": 72,
  "text": "219110760e0697b7",
}
`;

exports[`cs250-r1.0 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "99976145faf23e17",
  "chunks": 169,
  "text": "444898df77838cb1",
}
`;

exports[`cs250-r1.0 > spec-commonmark 1`] = `
{
  "breadcrumbs": "55460f014511a8c6",
  "chunks": 865,
  "text": "5c25900aa300db28",
}
`;

exports[`cs250-r1.0 > spec-gfm 1`] = `
{
  "breadcrumbs": "5fc6a8530850f41a",
  "chunks": 913,
  "text": "b4de47599b989026",
}
`;

exports[`cs250-r1.0 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "3cb2d15701251d16",
  "chunks": 515,
  "text": "467717e7d7a3b6f7",
}
`;

exports[`cs250-r1.0 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "f810f9a06fa544da",
  "chunks": 56,
  "text": "8943bd4881964ad3",
}
`;

exports[`cs250-r1.0 > wikipedia-python 1`] = `
{
  "breadcrumbs": "6c9673f642d01ce9",
  "chunks": 280,
  "text": "dc5cfae749b511d5",
}
`;

exports[`cs250-r1.0 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "0e4a9b7eae9022b0",
  "chunks": 343,
  "text": "2820649f5bef798b",
}
`;

exports[`cs250-r1.5 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "92795dbcd46f97e0",
  "chunks": 8,
  "text": "03b578ba0cdc93c6",
}
`;

exports[`cs250-r1.5 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "e4cc0a71d73f3c8a",
  "chunks": 73,
  "text": "afdda52ea5ab2b0a",
}
`;

exports[`cs250-r1.5 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "f430f53382b1698e",
  "chunks": 215,
  "text": "63a475707abefe63",
}
`;

exports[`cs250-r1.5 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "6221930bcd5339d0",
  "chunks": 196,
  "text": "a767bed7f0cf52d4",
}
`;

exports[`cs250-r1.5 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "db97f1d45c047ae9",
  "chunks": 46,
  "text": "af979f465dfe98cb",
}
`;

exports[`cs250-r1.5 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "0b699ab98ad38fdc",
  "chunks": 107,
  "text": "664827596cbb1101",
}
`;

exports[`cs250-r1.5 > spec-commonmark 1`] = `
{
  "breadcrumbs": "acddfccc6d1e1d4a",
  "chunks": 554,
  "text": "14f73dbbe484bea2",
}
`;

exports[`cs250-r1.5 > spec-gfm 1`] = `
{
  "breadcrumbs": "7539bfcd3be81759",
  "chunks": 579,
  "text": "d9e647adaed281fd",
}
`;

exports[`cs250-r1.5 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "9e52cf7e92e7316f",
  "chunks": 346,
  "text": "8165c6e6467628b0",
}
`;

exports[`cs250-r1.5 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "75a18fa1aaf5d171",
  "chunks": 40,
  "text": "701bc28d4c0a27de",
}
`;

exports[`cs250-r1.5 > wikipedia-python 1`] = `
{
  "breadcrumbs": "0081f5eeedd4dbe8",
  "chunks": 186,
  "text": "a86b5ff48816ce16",
}
`;

exports[`cs250-r1.5 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "c56096f268535cd5",
  "chunks": 220,
  "text": "caf569645079d07c",
}
`;

exports[`cs500-r1.0 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "92795dbcd46f97e0",
  "chunks": 8,
  "text": "745e0d969ca3eed5",
}
`;

exports[`cs500-r1.0 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "d9df00c38f1d1dc0",
  "chunks": 53,
  "text": "603a9a981c941059",
}
`;

exports[`cs500-r1.0 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "3128c8fe07521c10",
  "chunks": 167,
  "text": "d70665ab2dfdc194",
}
`;

exports[`cs500-r1.0 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "50593d6531b6cbd7",
  "chunks": 148,
  "text": "b7166224c4d98eb5",
}
`;

exports[`cs500-r1.0 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "0f5db00a3cf72436",
  "chunks": 37,
  "text": "9db5ed2d2afac318",
}
`;

exports[`cs500-r1.0 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "8c09785cf6076bf1",
  "chunks": 81,
  "text": "40d948abdebea262",
}
`;

exports[`cs500-r1.0 > spec-commonmark 1`] = `
{
  "breadcrumbs": "9a1b58bfb026f86a",
  "chunks": 403,
  "text": "f36d16140d857b04",
}
`;

exports[`cs500-r1.0 > spec-gfm 1`] = `
{
  "breadcrumbs": "9fe2749d25a4a7d9",
  "chunks": 430,
  "text": "14a539b444bbef28",
}
`;

exports[`cs500-r1.0 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "2d91e69322eb66de",
  "chunks": 262,
  "text": "6322a3bcd6288d6c",
}
`;

exports[`cs500-r1.0 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "11a44a3671651cf2",
  "chunks": 31,
  "text": "c0eafc1d4e8801f0",
}
`;

exports[`cs500-r1.0 > wikipedia-python 1`] = `
{
  "breadcrumbs": "f2a10a359d5ac43d",
  "chunks": 139,
  "text": "1f728e65550d2a0f",
}
`;

exports[`cs500-r1.0 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "d82272a0ab6d2ca8",
  "chunks": 167,
  "text": "137436d342e59bed",
}
`;

exports[`cs500-r1.5 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "3860c587bed02e57",
  "chunks": 6,
  "text": "c5507e52511a53f1",
}
`;

exports[`cs500-r1.5 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "f83003727f134625",
  "chunks": 34,
  "text": "ae086bf52ce88589",
}
`;

exports[`cs500-r1.5 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "f42c01dea0a5bf16",
  "chunks": 111,
  "text": "93dde82d7faf7d4c",
}
`;

exports[`cs500-r1.5 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "2a00ca0ca4d5dbcb",
  "chunks": 104,
  "text": "bb2dcad3c24ae2f0",
}
`;

exports[`cs500-r1.5 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "cf47aef17fea2918",
  "chunks": 25,
  "text": "76362ce2059aedd8",
}
`;

exports[`cs500-r1.5 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "449e0e811004fbc4",
  "chunks": 54,
  "text": "af50b4c07b53ed9b",
}
`;

exports[`cs500-r1.5 > spec-commonmark 1`] = `
{
  "breadcrumbs": "49bb90cc06cd3968",
  "chunks": 263,
  "text": "8460a0d3dfd3352a",
}
`;

exports[`cs500-r1.5 > spec-gfm 1`] = `
{
  "breadcrumbs": "b495b9ae0e5660d0",
  "chunks": 274,
  "text": "fbfaa6db0472f9e7",
}
`;

exports[`cs500-r1.5 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "92ed5b039f63f2ec",
  "chunks": 171,
  "text": "c7b9f39855391dea",
}
`;

exports[`cs500-r1.5 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "da985f9e9d4432b3",
  "chunks": 20,
  "text": "f9a3b818536a2a84",
}
`;

exports[`cs500-r1.5 > wikipedia-python 1`] = `
{
  "breadcrumbs": "ecf93203f6f58c6a",
  "chunks": 94,
  "text": "499e2a898893e336",
}
`;

exports[`cs500-r1.5 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "9c897ec375edae70",
  "chunks": 112,
  "text": "45d2a0895290465c",
}
`;

exports[`cs1000-r1.0 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "7438d84c18938d33",
  "chunks": 5,
  "text": "773326ef69673a29",
}
`;

exports[`cs1000-r1.0 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "e20323b2a9286103",
  "chunks": 29,
  "text": "62658403d6200e56",
}
`;

exports[`cs1000-r1.0 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "6e101b628b81fb14",
  "chunks": 80,
  "text": "4659ba0e48f1c92d",
}
`;

exports[`cs1000-r1.0 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "a05877d674cc21b7",
  "chunks": 67,
  "text": "cf499ab268a12d95",
}
`;

exports[`cs1000-r1.0 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "1f489eb719aac0a7",
  "chunks": 18,
  "text": "2c3aeee6f83a402b",
}
`;

exports[`cs1000-r1.0 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "2539b69a2e002409",
  "chunks": 40,
  "text": "0b598b8c4981e142",
}
`;

exports[`cs1000-r1.0 > spec-commonmark 1`] = `
{
  "breadcrumbs": "7f96f3f6aacee5dc",
  "chunks": 192,
  "text": "aa5c89fdaa7412ef",
}
`;

exports[`cs1000-r1.0 > spec-gfm 1`] = `
{
  "breadcrumbs": "a98fb35a0ad03588",
  "chunks": 202,
  "text": "c47f980efe1b4876",
}
`;

exports[`cs1000-r1.0 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "96195b27fe2d55f3",
  "chunks": 129,
  "text": "c69cb118f70c7665",
}
`;

exports[`cs1000-r1.0 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "63fdacfb382a5bb4",
  "chunks": 16,
  "text": "b89ad0480eefed83",
}
`;

exports[`cs1000-r1.0 > wikipedia-python 1`] = `
{
  "breadcrumbs": "9b90749812f6eaec",
  "chunks": 65,
  "text": "111dea7b0974f655",
}
`;

exports[`cs1000-r1.0 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "625fcc430528a776",
  "chunks": 82,
  "text": "dd6bd7bbcb71ed0f",
}
`;

exports[`cs1000-r1.5 > ai-sdk-overview 1`] = `
{
  "breadcrumbs": "aac58df467cc8192",
  "chunks": 4,
  "text": "d83f109edf1a3427",
}
`;

exports[`cs1000-r1.5 > ai-sdk-prompts 1`] = `
{
  "breadcrumbs": "9f81b83d333eed88",
  "chunks": 20,
  "text": "04369ddf861ecb85",
}
`;

exports[`cs1000-r1.5 > ai-sdk-tools 1`] = `
{
  "breadcrumbs": "84f25c95045222db",
  "chunks": 52,
  "text": "889192b35d940fce",
}
`;

exports[`cs1000-r1.5 > flat-photosynthesis 1`] = `
{
  "breadcrumbs": "110a6b34e6ec7998",
  "chunks": 48,
  "text": "1dbd86f83258e9ea",
}
`;

exports[`cs1000-r1.5 > flat-photosynthesis-small 1`] = `
{
  "breadcrumbs": "517d73fadace09fe",
  "chunks": 11,
  "text": "6663558fd046c74c",
}
`;

exports[`cs1000-r1.5 > rust-book-ownership 1`] = `
{
  "breadcrumbs": "f5dd7aa6a0d28b31",
  "chunks": 27,
  "text": "57d70526c0bb78a5",
}
`;

exports[`cs1000-r1.5 > spec-commonmark 1`] = `
{
  "breadcrumbs": "4ab8dcd262972caa",
  "chunks": 132,
  "text": "820da2b9982c934a",
}
`;

exports[`cs1000-r1.5 > spec-gfm 1`] = `
{
  "breadcrumbs": "a73c7584ced749e4",
  "chunks": 140,
  "text": "bf59177ab2538db8",
}
`;

exports[`cs1000-r1.5 > wikipedia-berlin 1`] = `
{
  "breadcrumbs": "c2f6233da1e5a84f",
  "chunks": 80,
  "text": "86c950f666c85306",
}
`;

exports[`cs1000-r1.5 > wikipedia-markdown 1`] = `
{
  "breadcrumbs": "cc9a04a9f5aa6382",
  "chunks": 12,
  "text": "eda2d86c0c3c4014",
}
`;

exports[`cs1000-r1.5 > wikipedia-python 1`] = `
{
  "breadcrumbs": "af997dc821bad638",
  "chunks": 46,
  "text": "7407db092e812f5d",
}
`;

exports[`cs1000-r1.5 > wikipedia-transformer 1`] = `
{
  "breadcrumbs": "e2da611811cc1670",
  "chunks": 57,
  "text": "601f78fcc5d2afc6",
}
`;
